--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="author" content="Sella, Dominik, Gergő">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sella Dominik Gergő</title>
 </head>
 <body>
-    
+    <p>Sziasztok</p>
 </body>
 </html>
