--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <title>Sella Dominik Gergő</title>
 </head>
 <body>
-    <p>Hellóka szépségek</p>
-    <p>Sziasztok</p>
+    <main>
+        <header></header>
+        <nav></nav>
+        <article></article>
+        <footer></footer>
+    </main>
 </body>
 </html>
