--- a/index.html
+++ b/index.html
@@ -12,7 +12,52 @@
     <main>
         <header></header>
         <nav></nav>
-        <article></article>
+        <article>
+            <table>
+              <tr>
+                <th>Megnevezés</th>
+                <th>Súly</th>
+                <th>Átlag életkor</th>
+                <th>Ilusztráció</th>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </table>
+            </article>
         <footer></footer>
     </main>
 </body>
