--- a/masodik.html
+++ b/masodik.html
@@ -11,7 +11,8 @@
 <body>
     <main>
         <header></header>
-        <nav></nav>
+        <nav>
+        </nav>
         <article></article>
         <footer></footer>
     </main>
