--- a/harmadik.html
+++ b/harmadik.html
@@ -10,9 +10,16 @@
 </head>
 <body>
     <main>
-        <header></header>
-        <nav></nav>
-        <article></article>
+        <header>Mardarak</header>
+        <nav>
+            <ul>
+                <li><a href="#index.html">Cicák</a></li>
+                <li><a href="#masodik.html">Kutyák</a></li>
+                <li><a href="#harmadik.html">Madarak</a></li>
+            </ul>
+        </nav>
+        <article>
+        </article>
         <footer></footer>
     </main>
 </body>
