--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header>Cicák</header>
         <nav>
             <ul>
-                <li><a href="#index.html">Cicák</a></li>
-                <li><a href="#masodik.html">Kutyák</a></li>
-                <li><a href="#harmadik.html">Madarak</a></li>
+                <li><a href="index.html">Cicák</a></li>
+                <li><a href="masodik.html">Kutyák</a></li>
+                <li><a href="harmadik.html">Madarak</a></li>
             </ul>
         </nav>
         <article>
