--- a/harmadik.html
+++ b/harmadik.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Sella, Dominik, Gergő">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilus.css">
     <title>Sella Dominik Gergő</title>
 </head>
 <body>
