--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <header>Cicák</header>
+        <header><h1>Cicák</h1></header>
         <nav>
             <ul>
                 <li><a href="index.html">Cicák</a></li>
