--- a/masodik.html
+++ b/masodik.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <header>Kutyák</header>
+        <header><h1>Kutyák</h1></header>
         <nav>
             <ul>
                 <li><a href="index.html">Cicák</a></li>
