--- a/harmadik.html
+++ b/harmadik.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <header><h1>Mardarak</h1></header>
+        <header><h1>Kacsák</h1></header>
         <nav>
             <ul>
                 <li><a href="index.html">Cicák</a></li>
