--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Cicák</a></li>
                 <li><a href="masodik.html">Kutyák</a></li>
-                <li><a href="harmadik.html">Madarak</a></li>
+                <li><a href="harmadik.html">Kacsák</a></li>
             </ul>
         </nav>
         <article>
