kutyak kezdet + harmadik kis fix

--- a/masodik.html
+++ b/masodik.html
@@ -19,9 +19,6 @@
             </ul>
         </nav>
         <article>
-        <header></header>
-        <nav></nav>
-        <article>
             <table>
                 <tr>
                   <th>Megnevezés</th>
@@ -30,37 +27,25 @@
                   <th>Ilusztráció</th>
                 </tr>
                 <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
+                  <td>Afgán agár</td>
                   <td></td>
                   <td></td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
+                  <td>Alaszkai Malamut</td>
                   <td></td>
                   <td></td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>Akita Inu</td>
                   <td></td>
                   <td></td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>Amerikai Bulldog</td>
                   <td></td>
                   <td></td>
                   <td></td>
