--- a/harmadik.html
+++ b/harmadik.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Free Web tutorials">
@@ -28,18 +28,6 @@
                   <th>Súly</th>
                   <th>Átlag életkor</th>
                   <th>Ilusztráció</th>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
                 <tr>
                   <td></td>
