--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Free Web tutorials">
@@ -19,10 +19,6 @@
             </ul>
         </nav>
         <article>
-        </article>
-        <header></header>
-        <nav></nav>
-        <article>
             <table>
               <tr>
                 <th>Megnevezés</th>
@@ -31,31 +27,19 @@
                 <th>Ilusztráció</th>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
+                <td>Tigris</td>
+                <td>Jaguár</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
+                <td>90 és 300 kg között</td>
+                <td>56–96 kilogramm között</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td></td>
+                <td>10 - 15 év</td>
                 <td></td>
                 <td></td>
                 <td></td>
