kutyák kép hiányzik

--- a/masodik.html
+++ b/masodik.html
@@ -25,31 +25,31 @@
                   <th>Megnevezés</th>
                   <th>Súly</th>
                   <th>Átlag életkor</th>
-                  <th>Ilusztráció</th>
+                  <th>Illusztráció</th>
                 </tr>
                 <tr>
                   <td>Afgán agár</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>26-44 kg</td>
+                  <td>11-14 év</td>
+                  <td><img src="" alt="Afgán agár"></td>
                 </tr>
                 <tr>
                   <td>Alaszkai Malamut</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>26-44 kg</td>
+                  <td>10-12 év</td>
+                  <td><img src="" alt="Alaszkai malamut"></td>
                 </tr>
                 <tr>
                   <td>Akita Inu</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>26-44 kg</td>
+                  <td>10-14 év</td>
+                  <td><img src="" alt="Akita inu"></td>
                 </tr>
                 <tr>
                   <td>Amerikai Bulldog</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>26-44 kg</td>
+                  <td>8-15 év</td>
+                  <td><img src="" alt="Amerikai bulldog"></td>
                 </tr>
               </table>
         </article>
