--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
                 <th>Megnevezés</th>
                 <th>Súly</th>
                 <th>Átlag életkor</th>
-                <th>Ilusztráció</th>
+                <th>Illusztráció</th>
               </tr>
               <tr>
                 <td>Tigris</td>
-                <td>Jaguár</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
                 <td>90 és 300 kg között</td>
-                <td>56–96 kilogramm között</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
                 <td>10 - 15 év</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><img src="" alt=""></td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Jaguár</td>
+                <td>56 - 96 kilogramm között</td>
+                <td>12 - 15 év</td>
+                <td><img src="" alt=""></td>
+              </tr>
+              <tr>
+                <td>Leopárd</td>
+                <td>23 - 31 kg</td>
+                <td>12 - 17 év</td>
+                <td><img src="" alt=""></td>
+              </tr>
+              <tr>
+                <td>Oroszlán</td>
+                <td>130 - 190 kg</td>
+                <td>8 - 16 év </td>
+                <td><img src="" alt=""></td>
               </tr>
             </table>
             </article>
