--- a/harmadik.html
+++ b/harmadik.html
@@ -25,7 +25,7 @@
                   <th>Megnevezés</th>
                   <th>Súly</th>
                   <th>Átlag életkor</th>
-                  <th>Ilusztráció</th>
+                  <th>Illusztráció</th>
                 </tr>
                 <tr>
                   <td></td>
