--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
                 <td>Tigris</td>
                 <td>90 és 300 kg között</td>
                 <td>10 - 15 év</td>
-                <td><img src="" alt=""></td>
+                <td><img src="kepek/tigris.png" alt=""></td>
               </tr>
               <tr>
                 <td>Jaguár</td>
                 <td>56 - 96 kilogramm között</td>
                 <td>12 - 15 év</td>
-                <td><img src="" alt=""></td>
+                <td><img src="kepek/jaguar.png" alt=""></td>
               </tr>
               <tr>
                 <td>Leopárd</td>
                 <td>23 - 31 kg</td>
                 <td>12 - 17 év</td>
-                <td><img src="" alt=""></td>
+                <td><img src="kepek/leopard.png" alt=""></td>
               </tr>
               <tr>
                 <td>Oroszlán</td>
                 <td>130 - 190 kg</td>
                 <td>8 - 16 év </td>
-                <td><img src="" alt=""></td>
+                <td><img src="kepek/oroszlan.png" alt=""></td>
               </tr>
             </table>
             </article>
