--- a/harmadik.html
+++ b/harmadik.html
@@ -53,7 +53,7 @@
                 </tr>
               </table>
         </article>
-        <footer></footer>
+        <footer><p>Both Orsolya</p></footer>
     </main>
 </body>
 </html>
