--- a/masodik.html
+++ b/masodik.html
@@ -53,7 +53,7 @@
                 </tr>
               </table>
         </article>
-        <footer></footer>
+        <footer>Dobos Dominik</footer>
     </main>
 </body>
 </html>
