--- a/masodik.html
+++ b/masodik.html
@@ -31,25 +31,25 @@
                   <td>Afgán agár</td>
                   <td>26-44 kg</td>
                   <td>11-14 év</td>
-                  <td><img src="" alt="Afgán agár"></td>
+                  <td><img src="kepek/Afgán-agár.jpg" alt="Afgán agár"></td>
                 </tr>
                 <tr>
                   <td>Alaszkai Malamut</td>
                   <td>26-44 kg</td>
                   <td>10-12 év</td>
-                  <td><img src="" alt="Alaszkai malamut"></td>
+                  <td><img src="kepek/Alaszkai-malamut.jpg" alt="Alaszkai malamut"></td>
                 </tr>
                 <tr>
                   <td>Akita Inu</td>
                   <td>26-44 kg</td>
                   <td>10-14 év</td>
-                  <td><img src="" alt="Akita inu"></td>
+                  <td><img src="kepek/Akita-Inu.jpg" alt="Akita inu"></td>
                 </tr>
                 <tr>
                   <td>Amerikai Bulldog</td>
                   <td>26-44 kg</td>
                   <td>8-15 év</td>
-                  <td><img src="" alt="Amerikai bulldog"></td>
+                  <td><img src="kepek/Amerikai-Bulldog.jpg" alt="Amerikai bulldog"></td>
                 </tr>
               </table>
         </article>
